# python-bson-streaming

./: .gitignore  README.md  bson2json.py  pyproject.toml  setup.py
.ci/: generate_fake_data.py
.github/workflows/: python-test.yml  python-wheel.yml  python.yml
bsonstream/: __init__.py
